change in md file

--- a/Example/demo.html
+++ b/Example/demo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-    <title>my-countdown demo</title>
+    <title>Demo Countdown</title>
     <meta charset="UTF-8">
     <script src="http://www.gstatic.com/external_hosted/polymer/custom.elements.min.js"></script>
     <style>
@@ -32,7 +32,7 @@
           <h1>Coming Soon</h1>
           <h3>Website is under construction please send us mail directly</h3>
         </div>
-        <countdown-timer id="countdown-timer_1" data-time="Feb 24, 2019 23:59:59" data-format="D-H-M-S" data-string="days to go" data-expire="Live" class="gwd-countdown-timer-1my3"></countdown-timer>
+        <countdown-timer id="countdown-timer_1" data-time="Feb 24, 2019 23:59:59" data-format="D-H-M-S" data-string="D-H-M-S" data-expire="Live" class="gwd-countdown-timer-1my3"></countdown-timer>
       </div>
     </div>
   </body>
